--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supabase:sample": "tsx ./tasks/setSampleSupabase.ts "
   },
   "dependencies": {
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.1",
     "clsx": "^2.1.1",
     "next": "15.3.4",
