--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "clsx": "^2.1.1",
     "next": "15.3.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.5",
