--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "next": "15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.5",
