--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "clsx": "^2.1.1",
     "japanese-holidays": "^1.0.10",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
+    "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
