--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@supabase/supabase-js": "^2.50.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "japanese-holidays": "^1.0.10",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.525.0",
