--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
-    "valibot": "^1.1.0",
-    "zod": "^3.25.76"
+    "valibot": "^1.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.6",
